Remove some custom implementations.