@@ -12,16 +12,17 @@ import java.util.List;
 import static java.util.Arrays.asList;
 import static java.util.Collections.singletonList;
 import static java.util.stream.Collectors.toList;
+import static l.files.fs.PathKt.hierarchy;
 import static org.junit.Assert.assertEquals;
 
 @RunWith(Parameterized.class)
 public final class PathHierarchyTest {
 
-    private final Path path;
+    private final java.nio.file.Path path;
     private final List<String> expectedHierarchy;
 
     public PathHierarchyTest(String path, List<String> expectedHierarchy) {
-        this.path = Path.of(path);
+        this.path = Paths.get(path);
         this.expectedHierarchy = expectedHierarchy;
     }
 
@@ -30,7 +31,7 @@ public final class PathHierarchyTest {
         return asList(new Object[][]{
             {"", singletonList("")},
             {"/", singletonList("/")},
-            {"/a/b/c", asList("/", "/a", "/a/b", "/a/b/c")},
+            {"/a/b/c", asList("/a/b/c", "/a/b", "/a", "/")},
         });
     }
 
@@ -38,7 +39,7 @@ public final class PathHierarchyTest {
     public void test() {
         assertEquals(
             expectedHierarchy.stream().map(Paths::get).collect(toList()),
-            path.hierarchy().stream().map(Path::toJavaPath).collect(toList())
+            hierarchy(path)
         );
     }
 }
