@@ -2,7 +2,8 @@ package l.files.ui.base.fs;
 
 import android.os.Environment;
 
-import l.files.fs.Path;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import static android.os.Environment.getExternalStorageDirectory;
 import static android.os.Environment.getExternalStoragePublicDirectory;
@@ -11,9 +12,9 @@ public final class UserDirs {
     private UserDirs() {
     }
 
-    static final Path DIR_SDCARD2 = Path.of("/sdcard2");
-    static final Path DIR_ROOT = Path.of("/");
-    public static final Path DIR_HOME = Path.of(getExternalStorageDirectory());
+    static final Path DIR_SDCARD2 = Paths.get("/sdcard2");
+    static final Path DIR_ROOT = Paths.get("/");
+    public static final Path DIR_HOME = getExternalStorageDirectory().toPath();
     static final Path DIR_DCIM = dir(Environment.DIRECTORY_DCIM);
     static final Path DIR_DOWNLOADS = dir(Environment.DIRECTORY_DOWNLOADS);
     static final Path DIR_MOVIES = dir(Environment.DIRECTORY_MOVIES);
@@ -21,7 +22,7 @@ public final class UserDirs {
     static final Path DIR_PICTURES = dir(Environment.DIRECTORY_PICTURES);
 
     private static Path dir(String type) {
-        return Path.of(getExternalStoragePublicDirectory(type));
+        return getExternalStoragePublicDirectory(type).toPath();
     }
 
 }
